--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # You will need a .env.local file for local dev server (localhost)
+# You will need a .env.production.local file for production deployment
 # You will need a .env.test.local file for running the integration tests.
 
 # Create the those files, and add the following variables.
@@ -7,6 +8,9 @@
 # In .env.local and .env.test.local:
 NEXT_PUBLIC_SUPABASE_URL="https://XXXX.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="XXXX"
+
+# For production, also add:
+NEXT_PUBLIC_APP_URL="https://your-production-domain.com"
 
 # Google OAuth for local development
 # You can use dummy values for local development or get real ones from Google Console
