feat: Add local development URL to environment example

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@
 # In .env.local and .env.test.local:
 NEXT_PUBLIC_SUPABASE_URL="https://XXXX.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="XXXX"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # For production, also add:
 NEXT_PUBLIC_APP_URL="https://your-production-domain.com"
