chore: Update environment example and README for clarity; clean up useUser hook

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # You will need a .env.production.local file for production deployment
 # You will need a .env.test.local file for running the integration tests.
 
-# Create the those files, and add the following variables.
+# Create those files, and add the following variables.
 # The local files are ignored by default.
 
 # In .env.local and .env.test.local:
@@ -10,7 +10,7 @@ NEXT_PUBLIC_SUPABASE_URL="https://XXXX.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="XXXX"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-# For production, also add:
+# In .env.production.local (for production deployments):
 NEXT_PUBLIC_APP_URL="https://your-production-domain.com"
 
 # Google OAuth for local development
